--- a/src/scss/modules/_index.scss
+++ b/src/scss/modules/_index.scss
@@ -5,6 +5,12 @@
 @import "./helpers";
 
 // ==========================================================================================
+// CHECKBOX
+// =========================================================================================
+
+@import '~pretty-checkbox/src/pretty-checkbox.scss';
+
+// ==========================================================================================
 // BANNER
 // =========================================================================================
 
