--- a/src/scss/modules/_tabs.scss
+++ b/src/scss/modules/_tabs.scss
@@ -4,7 +4,7 @@
 
 .tbs {
     @include e('button') {
-        text-align: center;
+        // text-align: center;
         button {
             display: inline-block;
             border: none;
