--- a/src/scss/layout/_srv-details.scss
+++ b/src/scss/layout/_srv-details.scss
@@ -82,15 +82,25 @@
             strong {
                 display: inline-block;
                 padding-left: 2px;
-                position: relative;
-                font-size: 23px;
+                font-size: 20px;
                 font-weight: $font-weight--lg;
-                z-index: 2;
-                @include p-el('after', 84px, 8px) {
-                    top: 20px;
-                    background-color: lighten($color: $color--seconary, $amount: 15%);
-                    z-index: -1;
+                @include mq('xl') {
+                    font-size: 23px;
                 }
+            }
+        }
+        #to-change {
+            background-color: color(secondary);
+            text-align: center;
+            padding: 2px 5px;
+            border-radius: $br-radius;
+            display: inline-block;
+            @include mq('xxl') {
+                padding: 2px 1px;
+            }
+
+            @include mq('xll') {
+                padding: 2px 5px;
             }
         }
 
